# hypr-crypto-lib

./: Cargo.toml  LICENSE  README.md
algebra/: Cargo.toml
algebra/benches/: msm.rs
algebra/src/: errors.rs  lib.rs  serialization.rs  traits.rs
algebra/src/baby_jubjub/: fr.rs
algebra/src/bls12_381/: fq.rs  fr.rs  g1.rs
algebra/src/bn254/: fq.rs  fr.rs
algebra/src/ed25519/: fr.rs
algebra/src/jubjub/: fr.rs
algebra/src/ristretto/: mod.rs
algebra/src/secp256k1/: fr.rs  g1.rs
algebra/src/secq256k1/: fr.rs
algebra/src/zorro/: fq.rs  fr.rs
api/: Cargo.toml
api/src/: errors.rs  keys.rs  lib.rs  serialization.rs  structs.rs
api/src/anon_xfr/: abar_to_abar.rs  address_folding_ed25519.rs  address_folding_secp256k1.rs  ar_to_abar.rs  mod.rs  ownership.rs
api/src/parameters/: bulletproofs.rs  mod.rs  params.rs  setup.rs
crypto/: Cargo.toml
crypto/benches/: hashing.rs
crypto/src/: anon_creds.rs  chaum_pedersen.rs  confidential_anon_creds.rs  delegated_schnorr.rs  elgamal.rs  errors.rs  hybrid_encryption.rs  lib.rs  matrix_sigma.rs  pedersen_elgamal.rs
crypto/src/anemoi_jive/: bls12_381.rs  bls12_381_deprecated.rs  bn254.rs  mds.rs  mod.rs  traces.rs
crypto/src/anemoi_jive/salts/: bls12_381.rs  bn254.rs
crypto/src/anemoi_jive/tests/: bls12_381.rs  bls12_381_deprecated.rs  bn254.rs
crypto/src/bulletproofs/: mix.rs  range.rs
crypto/src/bulletproofs/hashing_to_the_curve/: ed25519_elligator.rs  secp256k1_sswu.rs
crypto/src/bulletproofs/plume/: ed25519.rs  mod.rs  secp256k1.rs
crypto/src/bulletproofs/scalar_mul/: ed25519.rs  secp256k1.rs
crypto/src/doubly_snark_friendly/: ecies_encryption.rs  schnorr_signature.rs
crypto/src/field_simulation/: bls12_381.rs  bn254.rs  mod.rs
crypto/src/gapdh/: hoisting.rs  mod.rs  standard.rs
crypto/src/hashing_to_the_curve/: traits.rs
crypto/src/hashing_to_the_curve/ed25519/: elligator.rs  mod.rs  sswu.rs  sw.rs
crypto/src/hashing_to_the_curve/models/: elligator.rs  sswu.rs  sw.rs
crypto/src/hashing_to_the_curve/secp256k1/: sswu.rs  sw.rs
crypto/src/schnorr_gadgets/: gadget1_square.rs  gadget2_crossed_mul.rs  gadget3_move.rs  gadget4_merged.rs  mod.rs
plonk/: Cargo.toml
plonk/benches/: fft.rs  verifier.rs
plonk/src/: errors.rs  lib.rs
plonk/src/plonk/: helpers.rs  indexer.rs  prover.rs  transcript.rs  verifier.rs
plonk/src/plonk/constraint_system/: anemoi_jive.rs  mod.rs  turbo.rs
plonk/src/plonk/constraint_system/ecc/: const_base_ecc.rs  mod.rs  nonconst_base_ecc.rs
plonk/src/plonk/constraint_system/field_simulation/: fr_mul_var.rs  fr_var.rs
plonk/src/poly_commit/: field_polynomial.rs  kzg_poly_com.rs  pcs.rs  transcript.rs
