[[bin]]
name = 'gen-params'
path = 'src/parameters/setup.rs'
required-features = ['gen']

[package]
name = 'api'
version = '0.5.0'
edition = '2021'
description = 'hypr crypto'

[lib]
name = 'api'
crate-type = ['rlib']

[dependencies]
aes = '0.8.1'
aes-gcm = '0.10.1'
bincode = '1.3.1'
digest = '0.10'
lazy_static = "1.4.0"
libsecp256k1 = '0.7'
linear-map = '1.2.0'
merlin = '3.0'
rand_chacha = '0.3'
rmp-serde = '1.0.0'
serde = '1.0'
serde_derive = '1.0'
serde_str = '0.1.0'
serde_repr = '0.1'
sha2 = '0.10'
sha3 = '0.10'
wasm-bindgen-test = "^0.3"

[dependencies.algebra]
path = '../algebra'

[dependencies.crypto]
path = '../crypto'

[dependencies.plonk]
path = '../plonk'

[dependencies.curve25519-dalek]
package = "noah-curve25519-dalek"
version = "4.0.0"
default-features = false
features = ['serde']

[dependencies.ed25519-dalek]
package = "noah-ed25519-dalek"
version = "4.0.0"

[dependencies.bulletproofs]
package = "noah-bulletproofs"
version = "4.1.0"

[dependencies.ark-ff]
version = '0.4.0'
default-features = false

[dependencies.ark-serialize]
version = '0.4.0'
default-features = false

[dependencies.ark-std]
version = '0.4.0'
default-features = false

[dependencies.ark-ec]
version = '0.4.0'
default-features = false

[dependencies.ark-bulletproofs]
version = '4.0.0'
default-features = false
features = ['yoloproofs']

[dependencies.rand_core]
version = '0.6'
default-features = false
features = ['alloc']

[dependencies.wasm-bindgen]
version = '0.2.50'
features = ['serde-serialize']

[dependencies.num-integer]
version = '0.1.43'

[dependencies.num-traits]
version = '0.2.12'

[dependencies.num-bigint]
version = '0.4.0'
features = ['rand']

[dependencies.rayon]
version = '1.5'
optional = true

[dependencies.structopt]
version = '0.3.26'
optional = true

[dev-dependencies.rand]
version = '0.8'
default-features = false

[features]
default = ['std', 'u64_backend']
debug = ['plonk/debug']
std = [
  'algebra/std',
  'crypto/std',
  'plonk/std',
  'curve25519-dalek/std',
  'bulletproofs/std',
  'ark-bulletproofs/std',
  'ark-std/std',
  'ark-ec/std',
]
alloc = ['curve25519-dalek/alloc']
nightly = ['curve25519-dalek/nightly', 'rand/nightly']
u64_backend = ['curve25519-dalek/u64_backend']
u32_backend = ['curve25519-dalek/u32_backend']
avx2_backend = ['curve25519-dalek/avx2_backend']
asm = ['algebra/asm']
no_urs = []
no_srs = []
no_vk = []
parallel = ['default', 'rayon', 'algebra/parallel', 'plonk/parallel']
gen = ["parallel", "structopt"]
lightweight = [] # Minimize size for only AR2ABAR and ABAR2AR.
print-trace = ['algebra/print-trace']
xfr-tracing = []
