[[bench]]
name = 'fft'
path = 'benches/fft.rs'
harness = false

[[bench]]
name = 'verifier'
path = 'benches/verifier.rs'
harness = false

[package]
name = 'plonk'
version = '0.5.0'
edition = '2021'
description = 'TurboPLONK protocol'

[lib]
name = 'plonk'
crate-type = ['rlib']

[build-dependencies]
rustc_version = "0.4"

[dependencies]
bincode = '1.3.1'
criterion = { version = '0.5.0', default-features = false}
merlin = '3.0.0'
num-bigint = '0.4'
num-integer = '0.1.43'
serde_derive = '1.0.115'
wasm-bindgen-test = "^0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.50"

[dependencies.algebra]
path = '../algebra'

[dependencies.crypto]
path = '../crypto'

[dependencies.ark-ff]
version = '0.4.0'
default-features = false

[dependencies.ark-poly]
version = '0.4.0'
default-features = false

[dependencies.ark-serialize]
version = '0.4.0'
default-features = false

[dependencies.ark-std]
version = '0.4.0'
default-features = false

[dependencies.rayon]
version = '1.5'
optional = true

[dependencies.rand_chacha]
version = '0.3'
default-features = false

[dependencies.serde]
version = '1.0.115'
features = ['derive']

[dev-dependencies]
serde_json = '1.0'
rand = "0.8"

[dev-dependencies.num-bigint]
version = '0.4'
features = ['rand']

[features]
default = ["std"]
debug = []
std = ['ark-std/std', 'algebra/std']
asm = ['algebra/asm']
parallel = ['rayon', 'algebra/parallel', 'ark-poly/parallel']
print-trace = ['algebra/print-trace']
